gfx/layers/wr/WebRenderLayerManager.cpp
@@ -709,10 +709,6 @@ void WebRenderLayerManager::ScheduleComposite() {
   WrBridge()->SendScheduleComposite();
 }
 
-void WebRenderLayerManager::ForceComposite() {
-  WrBridge()->SendForceComposite();
-}
-
 void WebRenderLayerManager::SetRoot(Layer* aLayer) {
   // This should never get called
   MOZ_ASSERT(false);
