widget/gtk/nsWindow.cpp
@@ -3072,7 +3072,7 @@ gboolean nsWindow::OnConfigureEvent(GtkWidget* aWidget,
     // frame, and its contents might be incorrect. See bug 1280653 comment 7
     // and comment 10. Specifically we must ensure we recomposite the frame
     // as soon as possible to avoid the corrupted frame being displayed.
-    GetLayerManager()->ForceComposite();
+    GetLayerManager()->FlushRendering();
     return FALSE;
   }
 
